sas-core/main/default/objects/SBS_ScheduledBatchRun__c/SBS_ScheduledBatchRun__c.object-meta.xml
<CustomObject>
    <description>Object which stores information about scheduled batch runs. Scheduled batch runs are scheduled jobs with batches defined in schedule batch component custom metadata.</description>
    <label>Scheduled Batch Run</label>
    <nameField>
        <displayFormat>SBR-{000000}</displayFormat>
        <label>Schedule Batch Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Batch Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>