sas-core/main/default/objects/SBS_ScheduledBatchRun__c/fields/TimeSegment__c.field-meta.xml
<CustomField>
    <fullName>TimeSegment__c</fullName>
    <description>The time segment of the batches included in this batch run. Time segments are used to run batches in groups at different points in time.</description>
    <label>Time Segment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>